Rename picture -> profile picture

--- a/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
@@ -21,7 +21,7 @@
                     ? new MenuItem { Link = OdkRoutes.Account.EmailAddressChange(platform, Model.Chapter), Text = "Email address" }
                     : new MenuItem(),
                 platform == PlatformType.DrunkenKnitwits
-                    ? new MenuItem { Link = OdkRoutes.Account.Picture(Model.Chapter), Text = "Picture" }
+                    ? new MenuItem { Link = OdkRoutes.Account.Picture(Model.Chapter), Text = "Profile picture" }
                     : new MenuItem()
             }
         },
