--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
@@ -34,7 +34,7 @@
 @await Html.PartialAsync("Components/_Modal", new ModalViewModel
 {
     Id = "change-picture-modal",
-    Title = "Change picture",
+    Title = "Change profile picture",
     Size = "modal-lg",
     Body =
     @<div>
