--- a/ODK.Web.Razor/Views/Shared/Account/_PictureUpload.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PictureUpload.cshtml
@@ -22,7 +22,7 @@
     if (memberId == null)
     {
         htmlAttributes.Add("data-val", "true");
-        htmlAttributes.Add("data-val-required", "A picture is required");
+        htmlAttributes.Add("data-val-required", "A profile picture is required");
     }
 }
 
