--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -11,7 +11,7 @@
 @inject IAccountViewModelService AccountViewModelService
 @{
     Layout = "_AccountLayout";
-    Model.Title = "Profile";
+    Model.Title = "Profile picture";
 
     var viewModel = await AccountViewModelService.GetSitePicturePage(Model.CurrentMemberId);
 }
@@ -22,7 +22,7 @@
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Picture(null),
-        Title = "Picture",
+        Title = "Profile picture",
         Content =
             @<div>
                 @await Html.PartialAsync("Account/_AccountPersonalDetailsMenu")
