Add WhatsApp link

--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -100,6 +100,9 @@
         <i class="@Model.Class fa-solid fa-user"></i>break;
     case IconType.UserOutline:
         <i class="@Model.Class fa-regular fa-user"></i>break;
+    case IconType.WhatsApp:
+        <i class="@Model.Class fa-brands fa-whatsapp"></i>
+        break;
     case IconType.Wrench:
         <i class="@Model.Class fa-solid fa-wrench"></i>break;
 }
