--- a/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
@@ -28,7 +28,8 @@
         platform == PlatformType.DrunkenKnitwits
             ? new MenuItem()
             : new MenuItem { Link = OdkRoutes.MemberGroups.GroupImage(platform, chapter), Text = "Picture" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.GroupPrivacy(platform, chapter), Text = "Privacy" },        
+        new MenuItem { Link = OdkRoutes.MemberGroups.GroupPages(platform, chapter), Text = "Pages" },
+        new MenuItem { Link = OdkRoutes.MemberGroups.GroupPrivacy(platform, chapter), Text = "Privacy" },
         new MenuItem { Link = OdkRoutes.MemberGroups.GroupSocialMedia(platform, chapter), Text = "Social media" },
         platform == PlatformType.DrunkenKnitwits
             ? new MenuItem { Link = OdkRoutes.MemberGroups.GroupSubscription(platform, chapter), Text = "Subscription" }
