--- a/ODK.Web.Razor/Pages/Groups/Events/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Index.cshtml
@@ -14,7 +14,7 @@
 
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
 {
-    Title = "",
+    Title = "Events",
     Content = await Html.PartialAsync("Groups/_GroupEventsContent", viewModel),
     Group = viewModel
 })
