--- a/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
@@ -100,7 +100,7 @@
             </div>
         }
 
-        <div>
+        <div class="mb-3">
             <form action="/account/subscription/@memberSubscription.Id/cancel" method="post">
                 <p>
                     <button class="btn btn-danger" onclick="return confirm('Are you sure you want to cancel your subscription?');">
