--- a/ODK.Web.Razor/Pages/Groups/Members/Member.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Members/Member.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/groups/{slug}/members/{id:guid}"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
+@using ODK.Core.Exceptions
+@using ODK.Core.Pages
 @using ODK.Services.Members
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
@@ -14,6 +16,12 @@
     if (!viewModel.IsMember)
     {
         Response.Redirect(OdkRoutes.Groups.Join(viewModel.Platform, viewModel.Chapter));
+    }
+
+    var chapterPage = viewModel.ChapterPages.FirstOrDefault(x => x.PageType == PageType.Members);
+    if (chapterPage?.Hidden == true)
+    {
+        throw new OdkNotFoundException();
     }
 
     Model.Title = $"{viewModel.Member.GetDisplayName(viewModel.Chapter.Id)} | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
