--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
@@ -34,7 +34,7 @@
 
                     <div class="form-group mb-3 required">
                         @Html.LabelFor(x => x.Description, new { @class = "form-label" })
-                        @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
+                        @Html.TextAreaFor(x => x.Description, new { @class = "form-control", rows = 6, data_html_editor = "" })
                         @Html.ValidationMessageFor(x => x.Description)
                     </div>
                 </div>
