--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
@@ -14,7 +14,8 @@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.DefaultDayOfWeek, new { @class = "form-label" })
-    @Html.DropDownListFor(x => x.DefaultDayOfWeek, dayOfWeekOptions, " ", new { @class = "form-select" })
+    @Html.DropDownListFor(x => x.DefaultDayOfWeek, dayOfWeekOptions, "", 
+        new { @class = "form-select", data_select = "", data_clearable = "" })
 </div>
 
 <div class="row">
@@ -44,7 +45,8 @@
 
     <div class="form-group mb-3">
         @Html.LabelFor(x => x.DefaultScheduledEmailDayOfWeek, new { @class = "form-label" })
-        @Html.DropDownListFor(x => x.DefaultScheduledEmailDayOfWeek, dayOfWeekOptions, " ", new { @class = "form-select" })
+        @Html.DropDownListFor(x => x.DefaultScheduledEmailDayOfWeek, dayOfWeekOptions, "", 
+            new { @class = "form-select", data_select = "", data_clearable = "" })
     </div>
 
     <div class="form-group mb-3">
